@@ -5,6 +5,7 @@
 #include <QClipboard>
 #include <QMenu>
 #include <QDebug>
+#include "dbstatusdialog.h"
 
 ModeSelector::ModeSelector(View *view, QPushButton *button, Settings *settings, QObject *parent)
     : QObject{parent}, view_(view), button_(button), settings_(settings)
@@ -48,7 +49,7 @@ void ModeSelector::connectActions()
 
     // DB Model View
     connect(actionCancelBackToFS, &QAction::triggered, this, &ModeSelector::showFileSystem);
-    connect(actionShowDbStatus, &QAction::triggered, this, &ModeSelector::dbStatus);
+    connect(actionShowDbStatus, &QAction::triggered, this, &ModeSelector::showDbStatus);
     connect(actionResetDb, &QAction::triggered, this, &ModeSelector::resetDatabase);
     connect(actionForgetChanges, &QAction::triggered, this, &ModeSelector::restoreDatabase);
     connect(actionUpdateDbWithReChecksums, &QAction::triggered, this, &ModeSelector::updateMismatch);
@@ -99,6 +100,14 @@ void ModeSelector::prepareView()
     }
 
     processing(true);
+}
+
+void ModeSelector::showDbStatus()
+{
+    if (view_->data_ && view_->isCurrentViewModel(ModelView::ModelProxy)) { // if just imported --> ModelView::ModelProxy
+        DbStatusDialog dbStatusDialog(view_->data_);
+        dbStatusDialog.exec();
+    }
 }
 
 void ModeSelector::setMode()
