@@ -1,5 +1,6 @@
 Veretino 0.3.1 (in dev currently)
-* pressing Enter again in the path edit field performs a quick action (compute/verify file's checksum or open database)
+* Added an improved Dialog displaying the database status.
+* Pressing Enter again in the path edit field performs a quick action (compute/verify file's checksum or open database).
 
 Veretino 0.3.0
 * The internal data architecture has been redesigned.
